Tue Jun 22 01:38:23 2010  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: raise DRbConnError instead of ArgumentError if too
	  many arguments. [ruby-dev:41481]

	* test/drb/test_drb.rb: ditto.

	* test/drb/drbtest.rb: ditto.

Tue Jun 22 00:57:57 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/webrick/httpservlet/filehandler.rb
	  (prevent_directory_traversal): apply filesystem encoding to path
	  only during calling File.expand_path.  [ruby-dev:41423]

Mon Jun 21 23:41:08 2010  wanabe  <s.wanabe@gmail.com>

	* eval_error.c (error_print): clear raised_flag while error-printing
	  to avoid hang. [ruby-core:27608]

	* test/ruby/test_beginendblock.rb (test_endblock_raise): add test for
	  above.

Fri Jun 18 23:08:18 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Makefile.in (distclean-ext): removes directories for extensions
	  correctly.

	* common.mk (realclean-local): removes id.h too.

Fri Jun 18 01:33:21 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* enc/Makefile.in (realclean): has been missing. necessary
	  for make realclean-enc.

Fri Jun 18 01:12:33 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* configure.in (RMDIRS): reverts r27011 because it causes bothersome
	  messages on make clean.

Thu Jun 17 18:55:01 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_str_encode_ospath): when the encoding of the parameter
	  is ASCII-8BIT, should recognize as filesystem encoding, and convert
	  to UTF-8 on Windows.

	* file.c (realpath_rec): should convert to ospath encoding before
	  calling lstat().

	* file.c (rb_realpath_internal): resolved string should take over
	  the encoding of base string.

	* transcode.c (rb_str_encode): should return new string always.
	  fixed #3444.

Thu Jun 17 18:22:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/digest/sha2/lib/sha2.rb: revert r28347.  It's my mistake.

Thu Jun 17 17:32:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/digest/sha2/lib/sha2.rb: Darwin uses ".bundle", but not ".so",